load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

package(default_visibility = ["//visibility:public"])

alias(
    name = "tsconfig.json",
    actual = "//typescript:tsconfig.json",
)

# section 7 code to add here

buildifier(
    name = "buildifier-print",
    diff_command = "diff -u",
    lint_mode = "warn",
    mode = "diff",
)

buildifier(
    name = "buildifier-fix",
    lint_mode = "fix",
    mode = "fix",
)
