bazel_dep( # https://bazel.build/external/overview#bzlmod
    name = "rules_nixpkgs_core",
    version = "0.11.1",
)

bazel_dep( # needed by `nixpkgs_*_configure` as long as they are not module extensions yet. to do, test.
    name = "platforms",
    version = "0.0.9",
)

# https://bazel.build/external/extension#extension_usage
nix_repo = use_extension("@rules_nixpkgs_core//extensions:repository.bzl", "nix_repo")
nix_repo.file( # https://github.com/tweag/rules_nixpkgs/blob/master/core/extensions/repository.bzl#L270
    name = "nixpkgs",
    file = "//nix/nixpkgs:default.nix",
)
use_repo(nix_repo, "nixpkgs")

non_module_dependencies = use_extension("//:non_module_dependencies.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "nixpkgs_java_runtime_toolchain", "go_sdk_toolchains")

# java

bazel_dep(
    name = "rules_nixpkgs_java",
    version = "0.11.1",
)

bazel_dep(
    name = "rules_java",
    version = "7.5.0",
)

register_toolchains("@nixpkgs_java_runtime_toolchain//:all")

archive_override(
    module_name = "rules_nixpkgs_java",
    urls = "https://github.com/tweag/rules_nixpkgs/archive/927a31fdee00792e4b662c318aef7e52cb2b5580.tar.gz",
    integrity = "sha256-JIsQDLkgOX7u0R87PAbMNATKwU4AsJwC/q4KQkBO34s=",
    strip_prefix = "rules_nixpkgs-927a31fdee00792e4b662c318aef7e52cb2b5580/toolchains/java",
)

# proto

bazel_dep(
    name = "rules_proto",
    version = "6.0.0-rc2",
)

# go

bazel_dep(
    name = "rules_nixpkgs_go",
    version = "0.11.1",
)

bazel_dep(
    name = "rules_go",
    version = "0.46.0",
)

bazel_dep(
    name = "gazelle",
    version = "0.36.0",
)

register_toolchains("@go_sdk_toolchains//:all")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_golang_protobuf",
    "org_golang_google_grpc",
)

archive_override(
    module_name = "rules_nixpkgs_go",
    urls = "https://github.com/tweag/rules_nixpkgs/archive/927a31fdee00792e4b662c318aef7e52cb2b5580.tar.gz",
    integrity = "sha256-JIsQDLkgOX7u0R87PAbMNATKwU4AsJwC/q4KQkBO34s=",
    strip_prefix = "rules_nixpkgs-927a31fdee00792e4b662c318aef7e52cb2b5580/toolchains/go",
)
