bazel_dep(
    # https://bazel.build/external/overview#bzlmod
    name = "rules_nixpkgs_core",
    version = "0.11.1",
)
bazel_dep(
    # needed by `nixpkgs_*_configure` as long as they are not module extensions yet. to do, test.
    name = "platforms",
    version = "0.0.10",
)

# https://bazel.build/external/extension#extension_usage
nix_repo = use_extension("@rules_nixpkgs_core//extensions:repository.bzl", "nix_repo")
nix_repo.file(
    # https://github.com/tweag/rules_nixpkgs/blob/master/core/extensions/repository.bzl#L270
    name = "nixpkgs",
    file = "//nix/nixpkgs:default.nix",
)
use_repo(nix_repo, "nixpkgs")

non_module_dependencies = use_extension("//:non_module_dependencies.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "go_sdk_toolchains", "nixpkgs_java_runtime_toolchain")

# java

bazel_dep(
    name = "rules_nixpkgs_java",
    version = "0.11.1",
)
bazel_dep(
    name = "rules_java",
    version = "7.6.1",
)
bazel_dep(
    name = "grpc-java",
    version = "1.62.2",
)

register_toolchains("@nixpkgs_java_runtime_toolchain//:all")

archive_override(
    module_name = "rules_nixpkgs_java",
    integrity = "sha256-JIsQDLkgOX7u0R87PAbMNATKwU4AsJwC/q4KQkBO34s=",
    strip_prefix = "rules_nixpkgs-927a31fdee00792e4b662c318aef7e52cb2b5580/toolchains/java",
    urls = "https://github.com/tweag/rules_nixpkgs/archive/927a31fdee00792e4b662c318aef7e52cb2b5580.tar.gz",
)

# proto

bazel_dep(
    name = "rules_proto",
    version = "6.0.0",
)

# go

bazel_dep(
    name = "rules_nixpkgs_go",
    version = "0.11.1",
)
bazel_dep(
    name = "rules_go",
    version = "0.48.0",
)
bazel_dep(
    name = "gazelle",
    version = "0.37.0",
)

register_toolchains("@go_sdk_toolchains//:all")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_golang_protobuf",
    "org_golang_google_grpc",
)

archive_override(
    module_name = "rules_nixpkgs_go",
    integrity = "sha256-JIsQDLkgOX7u0R87PAbMNATKwU4AsJwC/q4KQkBO34s=",
    strip_prefix = "rules_nixpkgs-927a31fdee00792e4b662c318aef7e52cb2b5580/toolchains/go",
    urls = "https://github.com/tweag/rules_nixpkgs/archive/927a31fdee00792e4b662c318aef7e52cb2b5580.tar.gz",
)

# buildifier

bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.4.0",
)

# typescript

bazel_dep(
    name = "rules_nodejs",
    version = "5.8.3",
)
