bazel_dep(
    # https://bazel.build/external/overview#bzlmod
    name = "rules_nixpkgs_core",
    version = "0.11.1",
)
bazel_dep(
    # needed by `nixpkgs_*_configure` as long as they are not module extensions yet. to do, test.
    name = "platforms",
    version = "0.0.10",
)

# https://bazel.build/external/extension#extension_usage
nix_repo = use_extension("@rules_nixpkgs_core//extensions:repository.bzl", "nix_repo")
nix_repo.file(
    # https://github.com/tweag/rules_nixpkgs/blob/master/core/extensions/repository.bzl#L270
    name = "nixpkgs",
    file = "//nix/nixpkgs:default.nix",
)
use_repo(nix_repo, "nixpkgs")

non_module_dependencies = use_extension("//:non_module_dependencies.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "go_sdk_toolchains", "nixpkgs_java_runtime_toolchain", "nixpkgs_nodejs_toolchain")

# java

bazel_dep(
    name = "rules_nixpkgs_java",
    version = "0.11.1",
)
bazel_dep(
    name = "rules_java",
    version = "7.6.1",
)
bazel_dep(
    name = "grpc-java",
    version = "1.62.2",
)

register_toolchains("@nixpkgs_java_runtime_toolchain//:all")

archive_override(
    module_name = "rules_nixpkgs_java",
    integrity = "sha256-JIsQDLkgOX7u0R87PAbMNATKwU4AsJwC/q4KQkBO34s=",
    strip_prefix = "rules_nixpkgs-927a31fdee00792e4b662c318aef7e52cb2b5580/toolchains/java",
    urls = "https://github.com/tweag/rules_nixpkgs/archive/927a31fdee00792e4b662c318aef7e52cb2b5580.tar.gz",
)

# proto

bazel_dep(
    name = "rules_proto",
    version = "6.0.0",
)

# go

bazel_dep(
    name = "rules_nixpkgs_go",
    version = "0.11.1",
)
bazel_dep(
    name = "rules_go",
    version = "0.48.0",
)
bazel_dep(
    name = "gazelle",
    version = "0.37.0",
)

register_toolchains("@go_sdk_toolchains//:all")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_golang_protobuf",
    "org_golang_google_grpc",
)

archive_override(
    module_name = "rules_nixpkgs_go",
    integrity = "sha256-JIsQDLkgOX7u0R87PAbMNATKwU4AsJwC/q4KQkBO34s=",
    strip_prefix = "rules_nixpkgs-927a31fdee00792e4b662c318aef7e52cb2b5580/toolchains/go",
    urls = "https://github.com/tweag/rules_nixpkgs/archive/927a31fdee00792e4b662c318aef7e52cb2b5580.tar.gz",
)

# buildifier

bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.4.0",
)

# typescript

bazel_dep(
    name = "rules_nixpkgs_nodejs",
    version = "0.11.1",
)
bazel_dep(
    name = "aspect_rules_js",
    version = "1.42.3",
)
bazel_dep(
    name = "aspect_rules_ts",
    version = "2.4.2",
)
bazel_dep(
    name = "aspect_rules_esbuild",
    version = "0.20.1",
)
bazel_dep(
    name = "rules_nodejs",
    version = "6.0.5",
)

rules_ts_ext = use_extension(
    "@aspect_rules_ts//ts:extensions.bzl",
    "ext",
    dev_dependency = True,
)
rules_ts_ext.deps()
use_repo(rules_ts_ext, "npm_typescript")

register_toolchains("@nixpkgs_nodejs_toolchain//:all")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    bins = {
        # derived from "bin" attribute in node_modules/http-server/package.json
        "http-server": [
            "http-server=./bin/http-server",
        ],
    },
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

archive_override(
    module_name = "rules_nixpkgs_nodejs",
    integrity = "sha256-JIsQDLkgOX7u0R87PAbMNATKwU4AsJwC/q4KQkBO34s=",
    strip_prefix = "rules_nixpkgs-927a31fdee00792e4b662c318aef7e52cb2b5580/toolchains/nodejs",
    urls = "https://github.com/tweag/rules_nixpkgs/archive/927a31fdee00792e4b662c318aef7e52cb2b5580.tar.gz",
)

# short term workaround for https://github.com/aspect-build/rules_ts/pull/620
# (See also: https://github.com/NixOS/nixpkgs/issues/289505)
archive_override(
    module_name = "aspect_rules_ts",
    integrity = "sha256-LUJ/OuYKTPN6/ys6qt30kXZ48drHbbA46FfjV74FyvI=",
    strip_prefix = "rules_ts-8b00df0f559c2e4d75221e01ca76b0c41ce8aa7b",
    urls = "https://github.com/aspect-build/rules_ts/archive/8b00df0f559c2e4d75221e01ca76b0c41ce8aa7b.tar.gz",
)

# short term workaround for https://github.com/aspect-build/rules_esbuild/pull/215
# (See also: https://github.com/NixOS/nixpkgs/issues/289505)
archive_override(
    module_name = "aspect_rules_esbuild",
    integrity = "sha256-2skHEQGvRBB6x/ohwRy5jk0+Y0wbLLgZ9Z0SlY8ZKso=",
    strip_prefix = "rules_esbuild-e569104846dd35e3f93247ec01dac184e5ea972a",
    urls = "https://github.com/aspect-build/rules_esbuild/archive/e569104846dd35e3f93247ec01dac184e5ea972a.tar.gz",
)
