load("@buildifier_prebuilt//:rules.bzl", "buildifier")

package(default_visibility = ["//visibility:public"])

alias(
    name = "tsconfig.json",
    actual = "//typescript:tsconfig.json",
)

# section 7 code added here

buildifier(
    name = "buildifier-print",
    diff_command = "diff -u",
    lint_mode = "warn",
    mode = "diff",
)

buildifier(
    name = "buildifier-fix",
    lint_mode = "fix",
    mode = "fix",
)
