load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

# Type-checks, and emits output to
# bazel-bin/examples/simple/foo.js
# bazel-bin/examples/simple/foo.d.ts
ts_project(
    name = "app",
    srcs = ["app.ts"],
    declaration = True,
    deps = ["//proto/logger:logger_ts_proto"],
        # # Two dependencies are linked from first-party code in this repo
        # # by the npm_link_package calls in /examples/BUILD.bazel
        # "//examples:node_modules/@myorg/js_lib",
        # "//examples:node_modules/@myorg/dts_lib",
        # # Two dependencies are linked from third-party npm packages
        # # by the npm_link_all_packages call in /examples/BUILD.bazel
        # "//examples:node_modules/@types/node",
        # "//examples:node_modules/date-fns",
)

# load("@npm//@bazel/concatjs:index.bzl", "concatjs_devserver")
# load("@npm//@bazel/typescript:index.bzl", "ts_library")

# exports_files(["tsconfig.json"])

# # section 5 code to add here

# ts_library(
#     name = "app",
#     srcs = ["app.ts"],
#     deps = ["//proto/logger:logger_ts_proto"],                                                                                                                                                          
# )                                                                                                                                                                                                       
                                                                                                                                                                                                        
# concatjs_devserver(                                                                                                                                                                                     
#     name = "devserver",                                                                                                                                                                                 
#     entry_module = "bootcamp/typescript/app",                                                                                                                                                           
#     deps = [":app"],                                                                                                                                                                                    
# )                                                                                                                                                                                                       
