load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@aspect_rules_js//js:defs.bzl", "js_run_devserver")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:http-server/package_json.bzl", http_server_bin = "bin")

npm_link_all_packages(name = "node_modules")

http_server_bin.http_server_binary(
    name = "http_server",
)

# section 5 code added here

ts_project(
    name = "app",
    srcs = [
        "app.ts",
    ],
    extends = "tsconfig.json",
    transpiler = "tsc",
    tsconfig = {
        "extends": "tsconfig.json",
    },
    deps = [
        "//proto/logger:logger_ts_proto",
    ],
)

esbuild(
    name = "bundle",
    entry_point = "app.js",
)

js_run_devserver(
    name = "devserver",
    args = ["typescript/"],
    data = [
        "app.js",
        "bundle.js",
        "bundle.js.map",
        "index.html",
    ],
    tool = ":http_server",
)
