load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@aspect_rules_ts//ts:proto.bzl", "ts_proto_library")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

package(default_visibility = ["//visibility:public"])

# section 2 code to add here

proto_library(
    name = "logger_proto",
    srcs = ["logger.proto"],
)

go_proto_library(
    name = "logger_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "bootcamp/proto/logger",
    proto = ":logger_proto",
)

# section 3 code to add here

java_proto_library(
    name = "logger_java_proto",
    deps = [":logger_proto"],
)

# section 5 code to add here

ts_proto_library(
    name = "logger_ts_proto",
    node_modules = ":node_modules",
    proto = ":logger_proto",
)
