load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "server_lib",
    srcs = ["server.go"],
    importpath = "github.com/bazelbuild/codelabs/go/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/logger:logger_go_proto",
        "@org_golang_google_protobuf//encoding/protojson:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
    ],
)

# section 2 code to add here
