load("@aspect_rules_ts//ts:proto.bzl", "ts_proto_library")
load("@grpc-java//:java_grpc_library.bzl", "java_grpc_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

# section 2 code added here

proto_library(
    name = "logger_proto",
    srcs = ["logger.proto"],
)

go_proto_library(
    name = "logger_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "bootcamp/proto/logger",
    proto = ":logger_proto",
)

# section 3 code added here

java_proto_library(
    name = "logger_java_proto",
    deps = [":logger_proto"],
)

java_grpc_library(
    name = "logger_java_grpc",
    srcs = [":logger_proto"],
    deps = [":logger_java_proto"],
)

# section 5 code added here

ts_proto_library(
    name = "logger_ts_proto",
    copy_files = False,
    node_modules = ":node_modules",
    proto = ":logger_proto",
    proto_srcs = ["logger.proto"],
)
